# revvec

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
app/: package-lock.json  package.json  tailwind.config.js
app/src/: App.css  App.tsx
app/src-tauri/: tauri.conf.json
app/src/components/: AnswerBody.tsx  AnswerCard.tsx  ChatSidebar.tsx  Inspector.tsx  Logo.tsx  MessageThread.tsx  MicButton.tsx  PersonaPicker.tsx  SourcePanel.tsx  UserProfilePanel.tsx
app/src/lib/: api.ts  chatStore.ts  highlight.ts  userProfile.ts
scripts/: fetch.py  phase0_smoke.py  phase1_image_ingest.py  phase1_log_ingest.py  phase1_sop_ingest.py  phase1_sop_reset.py  phase2_promotion_demo.py  phase2_sensor_ingest.py  phase3_query_demo.py  phase4_answer_demo.py  phase5_voice_demo.py
src/revvec/: __init__.py  config.py  server.py
src/revvec/cluster/: __init__.py  promotion.py
src/revvec/embed/: __init__.py  service.py
src/revvec/ingestion/: __init__.py  dedup.py  image.py  log.py  orchestrator.py  sensor.py  sop.py  voice.py
src/revvec/llm/: __init__.py  cache.py  qwen_mlx.py
src/revvec/llm/prompts/: base.txt  maintenance.txt  new_hire.txt  plant_manager.txt  quality.txt
src/revvec/memory/: __init__.py  actian_writer.py  schema.py
src/revvec/persona/: __init__.py  router.py
src/revvec/retrieval/: __init__.py  cache.py  filters.py  hybrid.py  lexical.py
src/revvec/voice/: __init__.py  stt_tts.py
tests/: test_audit.py  test_embed_service.py  test_lexical.py  test_retrieval.py  test_schema.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
